# upstageailab-cv-classification-cv_3

./: .env.template  .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: backlog.md
.github/workflows/: main.yml
docs/: report_of_eda.md
notebooks/: notebook_template.ipynb
notebooks/duhwan/: .gitignore
notebooks/duhwan/gx-train/src/: main.ipynb
notebooks/duhwan/src/: cv-classification-viewer.ipynb  cv-classification.ipynb  cv-classification.py  inescapable_net.ipynb
notebooks/duhwan/src/data/: CvImageDataset.py  CvImageDatasetFast.py  FullAugraphyPipeline.py  FullAugraphyPipelineQueue.py  ImageDataset.py  MemoryImageSource.py
notebooks/duhwan/src/util/: config.py
notebooks/jaehyeong/: eda_test.py  model_Change_ver2_add_vali_20250703.py  vaildation_set_sample_test.py  vaildation_set_test_20250702.py  ver3_with_meta_train.csv  ver3_with_meta_valid.csv
notebooks/jaehyeong/그래프 저장소/그래프 분석 메모장/: 20250701_종합_EDA_그래프_분석.txt
notebooks/yuiyeong/: 250630_baseline_codes_review.ipynb  250706_poc_of_classifier.ipynb  250706_poc_of_datamodule.ipynb  250706_poc_of_dataset.ipynb  250707_poc_of_augmented_image_manager.ipynb  extract_image_features.py
scripts/: init-cloud-instance.sh
src/config/: __init__.py
src/data/: datamodules.py  datasets.py
src/libs/: storage.py
src/model/: classifier.py
src/script/: predict.py  train.py
src/training/: callbacks.py  loggers.py  losses.py
src/transforms/: __init__.py  factory.py
src/util/: helper.py  log.py
