[project]
name = "upstageailab-cv-classification-cv-3"
version = "0.1.0"
description = "Project For Classification of Document Images"
authors = [
    { name = "yuiyeong", email = "joyuiyeong@gmail.com" },
    { name = "duhwan", email = "korea202a@gmail.com" },
    { name = "jaehyeong", email = "whwogud33@naver.com" },
    { name = "juyoung", email = "korea.juyoung.na@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "wandb (>=0.20.1,<0.21.0)",
    "timm (>=1.0.16,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "boto3 (>=1.38.46,<2.0.0)",
    "pytorch-lightning (>=2.5.2,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)"
]

# PyTorch source For Linux CUDA
[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"

# PyTorch Platform Markers, Source
torch = [
    { version = "2.6.0", markers = "sys_platform == 'darwin'" },
    { version = "2.6.0", source = "pytorch-cu121", markers = "sys_platform == 'linux'" }
]
torchvision = [
    { version = "0.21.0", markers = "sys_platform == 'darwin'" },
    { version = "0.21.0", source = "pytorch-cu121", markers = "sys_platform == 'linux'" }
]
torchaudio = [
    { version = "2.6.0", markers = "sys_platform == 'darwin'" },
    { version = "2.6.0", source = "pytorch-cu121", markers = "sys_platform == 'linux'" }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
pre-commit = "^4.2.0"
pytest = "^8.4.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
